--- a/projects/alertme-component-angular/src/lib/components/subscription/subscription.component.css
+++ b/projects/alertme-component-angular/src/lib/components/subscription/subscription.component.css
@@ -1,40 +1,11 @@
 
-h1, h2, h3, h4, h5, h6 {
-  line-height: 1.2em;
-  margin: 0.75rem 0.5rem;
-  font-weight: 500;
-}
-
-h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
-  color: #424242;
-  display: block;
-  margin-top: -0.25rem;
-}
-.am-icon {
-  width: 16px;
-  height: 13px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
 
 .am-dropdown {
   width: 300px;
 }
 
-.am-input {
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  font-size: 20px;
-  color: #333;
-  padding: 8px;
-  margin-bottom: 10px;
-}
-.am-alert-name{
-  font-weight: bold;
-  font-size: 12pt;
-}
-.am-alert-description{
-  font-size: 12pt;
+.am-parameter-label {
+  display: block;
 }
 
 /*
@@ -55,8 +26,6 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   align-self: center;
   position: relative;
   width: 100%;
-  background: #fafafa;
-  border: 0.0625rem solid #acacac;
   margin: 0.5rem;
 }
 
@@ -85,26 +54,33 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   width: auto;
 }
 
-.am-alert-parameters {
+.am-subscription-parameters {
   float: left;
   padding: 20px;
-  min-width: 300px;
 }
 
-.am-alert-deliver-to {
-  float: left;
+.am-subscription-deliver-to {
+  float: right;
   padding: 20px;
   border: 1px solid lightgrey;
-  margin-left: 20px;
+  margin-top: 20px;
 }
 
-.am-alert-save-cancel {
-  float:right;
-  padding: 10px;
+.am-subscription-content {
+  clear: both;
 }
 
+.am-subscription-on-off {
+  float: right;
+}
 
-.pure-checkbox input[type="checkbox"] {
+.am-subscription-save-cancel {
+  padding:10px;
+  float: right;
+  clear: both;
+}
+
+.am-checkbox input[type="checkbox"] {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
@@ -114,16 +90,11 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   position: absolute;
   width: 1px;
 }
-.pure-checkbox input[type="checkbox"]:focus + label:before,
-.pure-checkbox input[type="checkbox"]:hover + label:before
- {
-  border-color: #0079FE;
-  background-color: #f2f2f2;
-}
-.pure-checkbox input[type="checkbox"]:active + label:before {
+
+.am-checkbox input[type="checkbox"]:active + label:before {
   transition-duration: 0s;
 }
-.pure-checkbox input[type="checkbox"] + label{
+.am-checkbox input[type="checkbox"] + label{
   position: relative;
   padding-left: 2em;
   vertical-align: middle;
@@ -133,24 +104,21 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   color: #000;
   font-weight: 300;
 }
-.pure-checkbox input[type="checkbox"] + label:before{
+.am-checkbox input[type="checkbox"] + label:before{
   box-sizing: content-box;
   content: '';
-  color: #0079FE;
   position: absolute;
   top: 50%;
   left: 0;
   width: 14px;
   height: 14px;
   margin-top: -9px;
-  border: 2px solid #0079FE;
   text-align: center;
   transition: all 0.4s ease;
 }
-.pure-checkbox input[type="checkbox"] + label:after{
+.am-checkbox input[type="checkbox"] + label:after{
   box-sizing: content-box;
   content: '';
-  background-color: #0079FE;
   position: absolute;
   top: 50%;
   left: 4px;
@@ -161,17 +129,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   transform-origin: 50%;
   transition: transform 200ms ease-out;
 }
-.pure-checkbox input[type="checkbox"]:disabled + label:before{
-  border-color: #cccccc;
-}
-.pure-checkbox input[type="checkbox"]:disabled:focus + label:before
-.pure-checkbox input[type="checkbox"]:disabled:hover + label:before{
-  background-color: inherit;
-}
-.pure-checkbox input[type="checkbox"]:disabled:checked + label:before{
-  background-color: #cccccc;
-}
-.pure-checkbox input[type="checkbox"] + label:after{
+.am-checkbox input[type="checkbox"] + label:after{
   background-color: transparent;
   top: 50%;
   left: 4px;
@@ -179,28 +137,16 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   height: 3px;
   margin-top: -4px;
   border-style: solid;
-  border-color: #ffffff;
   border-width: 0 0 3px 3px;
   border-image: none;
   transform: rotate(-45deg) scale(0);
 }
-.pure-checkbox input[type="checkbox"]:checked + label:after{
+.am-checkbox input[type="checkbox"]:checked + label:after{
   content: '';
   transform: rotate(-45deg) scale(1);
   transition: transform 200ms ease-out;
 }
-.pure-checkbox input[type="radio"]:checked + label:before{
-  background-color: white;
-}
-.pure-checkbox input[type="radio"]:checked + label:after{
-  transform: scale(1);
-}
-.pure-checkbox input[type="radio"] + label:before{
-  border-radius: 50%;
-}
-.pure-checkbox input[type="checkbox"]:checked + label:before{
-  background: #0079FE;
-}
-.pure-checkbox input[type="checkbox"]:checked + label:after{
+
+.am-checkbox input[type="checkbox"]:checked + label:after{
   transform: rotate(-45deg) scale(1);
 }
